#588936 by fenstrat: Fixed Toolbar shortcuts not visible.

--- a/admin_menu_toolbar/admin_menu_toolbar.css
+++ b/admin_menu_toolbar/admin_menu_toolbar.css
@@ -85,6 +85,8 @@ html body.admin-menu {
 #admin-menu li.admin-menu-shortcuts ul {
   background-color: #666;
   padding: 5px 10px;
+  right: 10px;
+  width: auto;
 }
 #admin-menu li.admin-menu-shortcuts ul li {
   background: transparent none;
